:bug: Fix reward volume alignment & don't show download button

--- a/src/components/Header.sass
+++ b/src/components/Header.sass
@@ -21,6 +21,7 @@
 
 .navbarRight
   display: flex
+  align-items: center
   padding: 8px 16px
 
 .socialLink
